src/snapshots/cargo_vet__tests__builtin-complex-no-unaudited.snap
---
source: src/tests.rs
expression: stdout
---
Vetting Failed!

4 unvetted dependencies:
  third-core:5.0.0 missing ["safe-to-deploy"]
  third-core:10.0.0 missing ["safe-to-deploy"]
  thirdA:10.0.0 missing ["safe-to-deploy"]
  thirdAB:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    cargo vet inspect third-core 5.0.0   (used by firstA)                   (25 lines)
    cargo vet inspect third-core 10.0.0  (used by firstB, thirdA, thirdAB)  (100 lines)
    cargo vet inspect thirdA 10.0.0      (used by firstA)                   (100 lines)
    cargo vet inspect thirdAB 10.0.0     (used by firstAB)                  (100 lines)

estimated audit backlog: 325 lines

Use |cargo vet certify| to record the audits.

