src/snapshots/cargo_vet__tests__builtin-cycle-full-audited.snap
---
source: src/tests.rs
assertion_line: 2024
expression: stdout
---
Vetting Succeeded (2 fully audited)

