src/snapshots/cargo_vet__tests__builtin-cycle-inited.snap
---
source: src/tests.rs
assertion_line: 1994
expression: stdout
---
Vetting Succeeded (2 unaudited)

