src/snapshots/cargo_vet__tests__builtin-cycle-minimal-audited.snap
---
source: src/tests.rs
assertion_line: 2083
expression: stdout
---
Vetting Succeeded (2 fully audited)

