src/snapshots/cargo_vet__tests__builtin-dev-detection-cursed-full.snap
---
source: src/tests.rs
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  simple-dev-indirect:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    cargo vet inspect simple-dev-indirect 5.0.0  (used by simple-dev)  (25 lines)

estimated audit backlog: 25 lines

Use |cargo vet certify| to record the audits.

