src/snapshots/cargo_vet__tests__builtin-dev-detection-empty.snap
---
source: src/tests.rs
expression: stdout
---
Vetting Failed!

4 unvetted dependencies:
  both:10.0.0 missing ["safe-to-deploy"]
  dev-cycle-direct:10.0.0 missing ["safe-to-run"]
  normal:10.0.0 missing ["safe-to-deploy"]
  simple-dev:10.0.0 missing ["safe-to-run"]

recommended audits for safe-to-deploy:
    cargo vet inspect both 10.0.0    (used by root)  (100 lines)
    cargo vet inspect normal 10.0.0  (used by root)  (100 lines)

recommended audits for safe-to-run:
    cargo vet inspect dev-cycle-direct 10.0.0  (used by root)  (100 lines)
    cargo vet inspect simple-dev 10.0.0        (used by root)  (100 lines)

estimated audit backlog: 400 lines

Use |cargo vet certify| to record the audits.

