src/snapshots/cargo_vet__tests__builtin-dev-detection.snap
---
source: src/tests.rs
assertion_line: 2153
expression: stdout
---
Vetting Succeeded (6 fully audited)

