src/snapshots/cargo_vet__tests__builtin-haunted-no-unaudited.snap
---
source: src/tests.rs
expression: stdout
---
Vetting Failed!

2 unvetted dependencies:
  third-dev:10.0.0 missing ["safe-to-run"]
  third-normal:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    cargo vet inspect third-normal 10.0.0  (used by first)  (100 lines)

recommended audits for safe-to-run:
    cargo vet inspect third-dev 10.0.0  (used by first)  (100 lines)

estimated audit backlog: 200 lines

Use |cargo vet certify| to record the audits.

