src/snapshots/cargo_vet__tests__builtin-no-deps.snap
---
source: src/tests.rs
assertion_line: 1932
expression: stdout
---
Vetting Succeeded (because you have no third-party dependencies)

