src/snapshots/cargo_vet__tests__builtin-only-first-deps.snap
---
source: src/tests.rs
assertion_line: 1960
expression: stdout
---
Vetting Succeeded (because you have no third-party dependencies)

